--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
 <div class="section-intro">
-<div class="navigation-bar">
+<div class="navigation-background"></div>
+  <div class="navigation-display">
   <a class="navigation-item" href="#">About me</a>
   <a class="navigation-item" href="#">Skills</a>
   <a class="navigation-item" href="#">Projects</a>
   <a class="navigation-item" href="#">Contact</a>
-</div>
+  </div>
+
 </div>
 </body>
 </html>
