adding font-awesome library

--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dorota Leniec</title>
   <link rel="stylesheet" href="stylesheets/navigation.css">
+  <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
 </head>
 <body>
 <div class="section-intro">
-<div class="navigation-background"></div>
-  <div class="navigation-display">
-  <a class="navigation-item" href="#">About me</a>
-  <a class="navigation-item" href="#">Skills</a>
-  <a class="navigation-item" href="#">Projects</a>
-  <a class="navigation-item" href="#">Contact</a>
+  <div class="navigation-container">
+    <div class="navigation-background"></div>
+    <div class="navigation-display">
+      <a class="navigation-item" href="#">About me</a>
+      <a class="navigation-item" href="#">Skills</a>
+      <a class="navigation-item" href="#">Projects</a>
+      <a class="navigation-item" href="#">Contact</a>
+    </div>
   </div>
-
 </div>
 </body>
 </html>
