--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dorota Leniec</title>
   <link rel="stylesheet" href="stylesheets/navigation.css">
-  <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
+  <link rel="stylesheet" href="libraries/font-awesome-4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
 </head>
 <body>
 <div class="section-intro">
   <div class="navigation-container">
     <div class="navigation-background"></div>
     <div class="navigation-display">
+      <i class="fa fa-times fa-3x navigation-item " aria-hidden="true"></i>
       <a class="navigation-item" href="#">About me</a>
       <a class="navigation-item" href="#">Skills</a>
       <a class="navigation-item" href="#">Projects</a>
