closing navigation on click event

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 <div class="section-intro">
-  <div class="navigation-container">
+  <div class="navigation-container" id="navigation-container">
     <div class="navigation-background"></div>
     <div class="navigation-display">
-      <i class="fa fa-times fa-3x navigation-item " aria-hidden="true"></i>
+      <i class="fa fa-times fa-3x navigation-item " id="navigation-close-button" aria-hidden="true"></i>
       <a class="navigation-item" href="#">About me</a>
       <a class="navigation-item" href="#">Skills</a>
       <a class="navigation-item" href="#">Projects</a>
@@ -21,5 +21,9 @@
     </div>
   </div>
 </div>
+<script src="libraries/bootstrap.js"></script>
+<script src="libraries/jquery-2.2.0.min.js"></script>
+<script src="scripts/navigation.js"></script>
+
 </body>
 </html>
