close button animates into hamburger

--- a/index.html
+++ b/index.html
@@ -10,14 +10,23 @@
 </head>
 <body>
 <div class="section-intro">
+  <!--<div id="navigation-open-button">-->
+    <!--<i class="fa fa-bars fa-3x" aria-hidden="true"></i>-->
+  <!--</div>-->
+
   <div class="navigation-container" id="navigation-container">
     <div class="navigation-background"></div>
     <div class="navigation-display">
-      <i class="fa fa-times fa-3x navigation-item " id="navigation-close-button" aria-hidden="true"></i>
-      <a class="navigation-item" href="#">About me</a>
-      <a class="navigation-item" href="#">Skills</a>
-      <a class="navigation-item" href="#">Projects</a>
-      <a class="navigation-item" href="#">Contact</a>
+      <div class="navigation-item " id="navigation-close-button">
+        <p class="close-button-line left-line additional-line">|</p>
+        <p class="close-button-line left-line">|</p>
+        <p class="close-button-line right-line">|</p>
+
+      </div>
+      <a class="navigation-item navigation-item-link" href="#">About me</a>
+      <a class="navigation-item navigation-item-link" href="#">Skills</a>
+      <a class="navigation-item navigation-item-link" href="#">Projects</a>
+      <a class="navigation-item navigation-item-link" href="#">Contact</a>
     </div>
   </div>
 </div>
