--- a/index.html
+++ b/index.html
@@ -10,18 +10,13 @@
 </head>
 <body>
 <div class="section-intro">
-  <!--<div id="navigation-open-button">-->
-    <!--<i class="fa fa-bars fa-3x" aria-hidden="true"></i>-->
-  <!--</div>-->
-
   <div class="navigation-container" id="navigation-container">
     <div class="navigation-background"></div>
     <div class="navigation-display">
-      <div class="navigation-item " id="navigation-close-button">
+      <div class="navigation-item close-button" id="navigation-close-button">
         <p class="close-button-line left-line additional-line">|</p>
         <p class="close-button-line left-line">|</p>
         <p class="close-button-line right-line">|</p>
-
       </div>
       <a class="navigation-item navigation-item-link" href="#">About me</a>
       <a class="navigation-item navigation-item-link" href="#">Skills</a>
@@ -30,8 +25,8 @@
     </div>
   </div>
 </div>
-<script src="libraries/bootstrap.js"></script>
 <script src="libraries/jquery-2.2.0.min.js"></script>
+<script src="libraries/bootstrap.js"></script>
 <script src="scripts/navigation.js"></script>
 
 </body>
