navigation bar close and open

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dorota Leniec</title>
   <link rel="stylesheet" href="stylesheets/navigation.css">
+  <link rel="stylesheet" href="stylesheets/about-me.css">
   <link rel="stylesheet" href="libraries/font-awesome-4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
 </head>
@@ -24,6 +25,9 @@
       <a class="navigation-item navigation-item-link" href="#">Contact</a>
     </div>
   </div>
+</div>
+<div class="section-about-me">
+
 </div>
 <script src="libraries/jquery-2.2.0.min.js"></script>
 <script src="libraries/bootstrap.js"></script>
