--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dorota Leniec</title>
+  <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
+  <link rel="stylesheet" href="stylesheets/main.css">
   <link rel="stylesheet" href="stylesheets/navigation.css">
   <link rel="stylesheet" href="stylesheets/about-me.css">
+  <link rel="stylesheet" href="stylesheets/skills.css">
+  <link rel="stylesheet" href="stylesheets/projects.css">
+  <link rel="stylesheet" href="stylesheets/contact.css">
   <link rel="stylesheet" href="libraries/font-awesome-4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Limelight|Mate+SC|Megrim" rel="stylesheet">
 </head>
 <body>
 <div class="section-intro">
@@ -19,16 +24,46 @@
         <p class="close-button-line left-line">|</p>
         <p class="close-button-line right-line">|</p>
       </div>
-      <a class="navigation-item navigation-item-link" href="#">About me</a>
-      <a class="navigation-item navigation-item-link" href="#">Skills</a>
-      <a class="navigation-item navigation-item-link" href="#">Projects</a>
-      <a class="navigation-item navigation-item-link" href="#">Contact</a>
+      <a class="navigation-item navigation-item-link" href="#">Home</a>
+      <a class="navigation-item navigation-item-link" href="#section-about-me">About me</a>
+      <a class="navigation-item navigation-item-link" href="#section-skills">Skills</a>
+      <a class="navigation-item navigation-item-link" href="#section-projects">Projects</a>
+      <a class="navigation-item navigation-item-link" href="#section-contact">Contact</a>
     </div>
   </div>
 </div>
-<div class="section-about-me">
 
+<div class="section-about-me" id="section-about-me">
+  <div class="section-title ">
+    <div class="title-triangle"></div>
+    About Me:
+  </div>
 </div>
+
+<div class="section-skills" id="section-skills">
+  <div class="section-title ">
+    <div class="title-triangle">
+
+    </div>My skills:
+  </div>
+</div>
+
+<div class="section-projects" id="section-projects">
+  <div class="section-title ">
+    <div class="title-triangle">
+
+    </div>My Projects
+  </div>
+</div>
+
+<div class="section-contact" id="section-contact">
+  <div class="section-title ">
+    <div class="title-triangle">
+
+    </div>Contact Me:
+  </div>
+</div>
+
 <script src="libraries/jquery-2.2.0.min.js"></script>
 <script src="libraries/bootstrap.js"></script>
 <script src="scripts/navigation.js"></script>
