smooth scrolling between sections

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css?family=Limelight|Mate+SC|Megrim" rel="stylesheet">
 </head>
 <body>
-<div class="section-intro">
+<div class="section-intro" id="section-intro">
   <div class="navigation-container" id="navigation-container">
     <div class="navigation-background"></div>
     <div class="navigation-display">
@@ -24,7 +24,7 @@
         <p class="close-button-line left-line">|</p>
         <p class="close-button-line right-line">|</p>
       </div>
-      <a class="navigation-item navigation-item-link" href="#">Home</a>
+      <a class="navigation-item navigation-item-link" href="#section-intro">Home</a>
       <a class="navigation-item navigation-item-link" href="#section-about-me">About me</a>
       <a class="navigation-item navigation-item-link" href="#section-skills">Skills</a>
       <a class="navigation-item navigation-item-link" href="#section-projects">Projects</a>
