--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Dorota Leniec</title>
   <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
   <link rel="stylesheet" href="stylesheets/main.css">
+  <link rel="stylesheet" href="stylesheets/intro.css">
   <link rel="stylesheet" href="stylesheets/navigation.css">
   <link rel="stylesheet" href="stylesheets/about-me.css">
   <link rel="stylesheet" href="stylesheets/skills.css">
@@ -30,6 +31,9 @@
       <a class="navigation-item navigation-item-link" href="#section-projects">Projects</a>
       <a class="navigation-item navigation-item-link" href="#section-contact">Contact</a>
     </div>
+  </div>
+  <div class="intro-quote">
+    <h1 class="quote">Mistakes are proof<br> that you are trying</h1>
   </div>
 </div>
 
