--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
   </div>
   <div class="intro-quote">
-    <h1 class="quote">Mistakes are proof<br> that you are trying</h1>
+    <h1 class="quote"> &lt Mistakes are proof<br> that you are trying /&gt</h1>
   </div>
 </div>
 
