--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="stylesheets/contact.css">
   <link rel="stylesheet" href="libraries/font-awesome-4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Limelight|Mate+SC|Megrim" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Josefin+Slab|Maven+Pro" rel="stylesheet">
 </head>
 <body>
 <div class="section-intro" id="section-intro">
@@ -42,6 +43,8 @@
     <div class="title-triangle"></div>
     About Me:
   </div>
+  <div class="about-me-content">
+  </div>
 </div>
 
 <div class="section-skills" id="section-skills">
@@ -63,9 +66,27 @@
 <div class="section-contact" id="section-contact">
   <div class="section-title ">
     <div class="title-triangle">
-
     </div>Contact Me:
   </div>
+  <div class="col-xs-6 contact-me-social">
+    <a class="social-link" href="#"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a>
+    <a class="social-link" href="#"><i class="fa fa-envelope fa-4x" aria-hidden="true"></i></a>
+    <a class="social-link" href="#"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
+  </div>
+<div class="contact-container">
+  <div class="contact-text">If you have any questions or would you like to co work with me just email me.</div>
+
+  <div class="contact-me col-xs-6 ">
+    <form id="contact-me-form" class="">
+      <input class='input-box' type="text" id="name-input" placeholder="Name & surname"><br>
+      <input class='input-box' type="text" id="subject-input" placeholder="Subject"><br>
+      <input class='input-box' type="text" id="email-input" placeholder="Email"><br>
+      <textarea class='input-box'id="message-input" placeholder="mess">Message</textarea><br>
+    </form>
+  </div>
+
+
+</div>
 </div>
 
 <script src="libraries/jquery-2.2.0.min.js"></script>
