contact section done

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
   <div class="section-title ">
     <div class="title-triangle">
 
-    </div>My skills:
+    </div>
+    My skills:
   </div>
 </div>
 
@@ -59,33 +60,26 @@
   <div class="section-title ">
     <div class="title-triangle">
 
-    </div>My Projects
+    </div>
+    My Projects
   </div>
 </div>
 
 <div class="section-contact" id="section-contact">
   <div class="section-title ">
     <div class="title-triangle">
-    </div>Contact Me:
+    </div>
+    Contact Me:
   </div>
-  <div class="col-xs-6 contact-me-social">
-    <a class="social-link" href="#"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a>
-    <a class="social-link" href="#"><i class="fa fa-envelope fa-4x" aria-hidden="true"></i></a>
-    <a class="social-link" href="#"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
+<div class="contact-text">
+  <h2>Any questions? <br>Feel free to ask:</h2>
+  <i class="fa fa-envelope" aria-hidden="true"></i>  dorleniec@gmail.com <br>
+  <i class="fa fa-phone" aria-hidden="true"></i>  +48 514 149 788
+  <div class="social-media">
+    <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+    <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+
   </div>
-<div class="contact-container">
-  <div class="contact-text">If you have any questions or would you like to co work with me just email me.</div>
-
-  <div class="contact-me col-xs-6 ">
-    <form id="contact-me-form" class="">
-      <input class='input-box' type="text" id="name-input" placeholder="Name & surname"><br>
-      <input class='input-box' type="text" id="subject-input" placeholder="Subject"><br>
-      <input class='input-box' type="text" id="email-input" placeholder="Email"><br>
-      <textarea class='input-box'id="message-input" placeholder="mess">Message</textarea><br>
-    </form>
-  </div>
-
-
 </div>
 </div>
 
