connecting links to social media

--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
   <i class="fa fa-envelope" aria-hidden="true"></i>  dorleniec@gmail.com <br>
   <i class="fa fa-phone" aria-hidden="true"></i>  +48 514 149 788
   <div class="social-media">
-    <i class="fa fa-github fa-2x" aria-hidden="true"></i>
-    <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+    <a href="https://pl.linkedin.com/in/dorotaleniec">
+      <i class="fa fa-github fa-2x " aria-hidden="true"></i></a>
 
+    <a href="https://github.com/DorotaLeniec">
+      <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
   </div>
 </div>
 </div>
