--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     </div>
   </div>
   <div class="intro-quote">
-    <h1 class="quote"> &lt Mistakes are proof<br> that you are trying /&gt</h1>
+    <h1 class="introduction">
+      <span class="my-name">Dorota Leniec</span>
+      <br> Junior Front-End Developer</h1>
   </div>
 </div>
 
@@ -49,18 +51,14 @@
 
 <div class="section-skills" id="section-skills">
   <div class="section-title ">
-    <div class="title-triangle">
-
-    </div>
+    <div class="title-triangle"></div>
     My skills:
   </div>
 </div>
 
 <div class="section-projects" id="section-projects">
   <div class="section-title ">
-    <div class="title-triangle">
-
-    </div>
+    <div class="title-triangle"></div>
     My Projects
   </div>
 </div>
