--- a/index.html
+++ b/index.html
@@ -50,10 +50,62 @@
 </div>
 
 <div class="section-skills" id="section-skills">
-  <div class="section-title ">
+  <div class="section-title">
     <div class="title-triangle"></div>
     My skills:
   </div>
+  <div class="skills-title  first">
+    Technologies i am using:
+  </div>
+  <div class="my-skills">
+    <div class="skills-row">
+      <div class="one-skill">
+        <img src="./images/icons/html.png" alt="html-icon">
+      </div>
+      <div class="one-skill">
+        <img src="./images/icons/css.png" alt="css-icon">
+      </div>
+      <div class="one-skill">
+        <img src="./images/icons/javascript.png" alt="js-icon">
+      </div>
+      <div class="one-skill">
+        <img src="./images/icons/jquery.png" alt="html-icon">
+      </div>
+    </div>
+
+    <div class="skills-row">
+      <div class="one-skill">
+        <img src="./images/icons/bootstrap.png" alt="bootstrap-icon">
+      </div>
+      <div class="one-skill">
+        <img src="./images/icons/hit.png" alt="git-icon">
+      </div>
+      <div class="one-skill">
+        <img src="./images/icons/node.png" alt="node-icon">
+      </div>
+    </div>
+
+    <div class="skills-row">
+      <div class="one-skill">
+        <img src="./images/icons/react.png" alt="react-icon">
+      </div>
+      <div class="one-skill">
+        <img src="./images/icons/webstorm.png" alt="webstorm-icon">
+      </div>
+    </div>
+  </div>
+
+  <div class="skills-title second">
+    I am learning:
+  </div>
+  <div class="my-skills">
+  <div class="skills-row">
+    <div class="one-skill">
+      <img src="./images/icons/angular.png" alt="angular-icon">
+    </div>
+  </div>
+  </div>
+</div>
 </div>
 
 <div class="section-projects" id="section-projects">
@@ -69,18 +121,18 @@
     </div>
     Contact Me:
   </div>
-<div class="contact-text">
-  <h2>Any questions? <br>Feel free to ask:</h2>
-  <i class="fa fa-envelope" aria-hidden="true"></i>  dorleniec@gmail.com <br>
-  <i class="fa fa-phone" aria-hidden="true"></i>  +48 514 149 788
-  <div class="social-media">
-    <a href="https://pl.linkedin.com/in/dorotaleniec">
-      <i class="fa fa-github fa-2x " aria-hidden="true"></i></a>
+  <div class="contact-text">
+    <h2>Any questions? <br>Feel free to ask:</h2>
+    <i class="fa fa-envelope" aria-hidden="true"></i> dorleniec@gmail.com <br>
+    <i class="fa fa-phone" aria-hidden="true"></i> +48 514 149 788
+    <div class="social-media">
+      <a href="https://pl.linkedin.com/in/dorotaleniec">
+        <i class="fa fa-github fa-2x " aria-hidden="true"></i></a>
 
-    <a href="https://github.com/DorotaLeniec">
-      <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+      <a href="https://github.com/DorotaLeniec">
+        <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+    </div>
   </div>
-</div>
 </div>
 
 <script src="libraries/jquery-2.2.0.min.js"></script>
