--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
   <div class="my-skills">
     <div class="skills-row">
       <div class="one-skill">
-        <img src="./images/icons/html.png" alt="html-icon">
+        <img  src="./images/icons/html2.png" alt="html-icon">
       </div>
       <div class="one-skill">
-        <img src="./images/icons/css.png" alt="css-icon">
+        <img src="./images/icons/css2.png" alt="css-icon">
       </div>
       <div class="one-skill">
-        <img src="./images/icons/javascript.png" alt="js-icon">
+        <img src="./images/icons/js2.png" alt="js-icon">
       </div>
       <div class="one-skill">
         <img src="./images/icons/jquery.png" alt="html-icon">
@@ -81,7 +81,7 @@
         <img src="./images/icons/hit.png" alt="git-icon">
       </div>
       <div class="one-skill">
-        <img src="./images/icons/node.png" alt="node-icon">
+        <img src="./images/icons/node2.png" alt="node-icon">
       </div>
     </div>
 
@@ -138,6 +138,7 @@
 <script src="libraries/jquery-2.2.0.min.js"></script>
 <script src="libraries/bootstrap.js"></script>
 <script src="scripts/navigation.js"></script>
+<script src="scripts/skills.js"></script>
 
 </body>
 </html>
